Replaced vector with valarray on NDArrayContainer

--- a/README.html
+++ b/README.html
@@ -378,6 +378,7 @@ ul.auto-toc {
 <li>Michael S. Hansen, National Institutes of Health, USA</li>
 <li>Nick Zwart, Barrow Neurological Institute, Phoenix, Arizona</li>
 <li>Souheil Inati, National Institutes of Health, USA</li>
+<li>Kaveh Vahedipour, Juelich Research Centre, Juelich, Germany</li>
 </ul>
 </div>
 <div class="section" id="obtaining-and-installing">
